output_10.1.168/malloc.cpp.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
/tmp/malloc.cpp-7ff4aa.hip:142:6: warning: CUDA identifier is unsupported in HIP.
#if (CUDA_VERSION > 4000) && 0 // we need to manually align to page boundaries to allow us to bind a texture to mapped memory
     ^
/tmp/malloc.cpp-7ff4aa.hip:323:23: warning: CUDA identifier is unsupported in HIP.
    cudaError_t err = cudaMallocManaged(&ptr, size);
                      ^
/tmp/malloc.cpp-7ff4aa.hip:460:5: warning: CUDA identifier is unsupported in HIP.
    CUpointer_attribute attribute[] = { CU_POINTER_ATTRIBUTE_MEMORY_TYPE };
    ^
/tmp/malloc.cpp-7ff4aa.hip:460:41: warning: CUDA identifier is unsupported in HIP.
    CUpointer_attribute attribute[] = { CU_POINTER_ATTRIBUTE_MEMORY_TYPE };
                                        ^
/tmp/malloc.cpp-7ff4aa.hip:463:22: warning: CUDA identifier is unsupported in HIP.
    CUresult error = cuPointerGetAttributes(1, attribute, data, reinterpret_cast<CUdeviceptr>(ptr));
                     ^
/tmp/malloc.cpp-7ff4aa.hip:466:7: warning: CUDA identifier is unsupported in HIP.
      cuGetErrorString(error, &string);
      ^
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
6 warnings and 1 error generated when compiling for host.
Error while processing /tmp/malloc.cpp-7ff4aa.hip.

[HIPIFY] info: file './quda/lib/malloc.cpp' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 53
  UNCONVERTED refs count: 7
  CONVERSION %: 88
  REPLACED bytes: 674
  TOTAL bytes: 20443
  CHANGED lines of code: 35
  TOTAL lines of code: 651
  CODE CHANGED (in bytes) %: 3
  CODE CHANGED (in lines) %: 5
  TIME ELAPSED s: 0.63
[HIPIFY] info: CONVERTED refs by type:
  memory: 14
  type: 17
  literal: 1
  numeric_literal: 17
  define: 4
[HIPIFY] info: CONVERTED refs by API:
  CUDA Driver API: 16
  CUDA RT API: 37
[HIPIFY] info: CONVERTED refs by names:
  CUDA_SUCCESS: 3
  CU_MEMORYTYPE_DEVICE: 1
  CU_MEMORYTYPE_HOST: 2
  CU_MEMORYTYPE_UNIFIED: 1
  CUdeviceptr: 3
  CUmemorytype: 1
  CUresult: 3
  cuMemAlloc: 1
  cuMemFree: 1
  cudaError_t: 10
  cudaFree: 2
  cudaFreeHost: 1
  cudaHostAlloc: 2
  cudaHostRegister: 2
  cudaHostRegisterDefault: 1
  cudaHostRegisterMapped: 2
  cudaHostRegisterPortable: 1
  cudaHostUnregister: 2
  cudaMalloc: 1
  cudaMemset: 3
  cudaSuccess: 10
[HIPIFY] info: UNCONVERTED refs by type:
  error: 1
  memory: 1
  addressing: 1
  type: 1
  literal: 1
  numeric_literal: 1
  define: 1
[HIPIFY] info: UNCONVERTED refs by API:
  CUDA Driver API: 5
  CUDA RT API: 2
[HIPIFY] info: UNCONVERTED refs by names:
  CUDA_VERSION: 1
  CU_POINTER_ATTRIBUTE_MEMORY_TYPE: 1
  CUpointer_attribute: 1
  cuGetErrorString: 1
  cuPointerGetAttributes: 2
  cudaMallocManaged: 1
